# Qt-Brotato

./: .gitignore  CMakeLists.txt  README.md  boss.cpp  boss.h  bullet.cpp  bullet.h  choose.cpp  choose.h  choose.ui  choose.xml  coin.cpp  coin.h  dynamicbackground.cpp  dynamicbackground.h  enemy.cpp  enemy.h  gamedata.h  gamewidget.cpp  gamewidget.h  gamewidget.ui  gamewidget.xml  gamewidget_audio.cpp  gamewidget_collisions.cpp  gamewidget_events.cpp  gamewidget_state.cpp  gamewidget_ui.cpp  gamewidget_update.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.xml  menu.cpp  menu.h  menu.ui  menu.xml  pause.cpp  pause.h  pause.ui  (+18 more)
configs/: maps.xml
docs/: DLC_PAYMENT.md  GAME_ENTITIES.md  GAME_LOGIC.md  MAIN_ARCHITECTURE.md  MANAGEMENT_SYSTEMS.md  NATAPP_TUTORIAL.md  UI_SYSTEM.md
natapp/: start.bat
server_brotato/: app.py  requirements.txt
server_brotato/keys/: alipay_public_key.pem  app_private_key.pem
